Modify BOOT parameters with kernel cmdline: BOOT_DELAY, BOOT_DEV, BOOT_PART

--- a/x86_images/grub.cfg
+++ b/x86_images/grub.cfg
@@ -21,6 +21,5 @@ insmod ext2
 set root='hd0,msdos1'
 search --no-floppy --fs-uuid --set=root 53C9-A75B 
 echo    'Loading Linux Image ...'
-linux /linux_image root=UUID=53C9-A75B init=/bin/sh BOOT_DELAY=3 BOOT_DEV=/dev/sda BOOT_DEV_PART=1 BOOT_ROOTFS=rootfs.squashfs BOOT_ON_RAM=y
+linux /linux_image console=ttyS0,115200n8 init=/bin/sh quiet BOOT_DELAY=3 BOOT_DEV=sd BOOT_PART=2
 }
-
