MAJOR_NUM=1 MINOR_NUM=7 AUX_NUM=0 update package.

--- a/x86_images/platform/dao.j3455.ini
+++ b/x86_images/platform/dao.j3455.ini
@@ -1,5 +1,5 @@
 [CFG_IMAGE]
-layout = {"parts" : ["part1", "part2"], "part1" : {"boot":1, "fstype":"fat32", "start":"1048576B", "end":"52428799B", "bin_files":["linux_image", "kmod.squashfs", "rootfs.squashfs", "dao.squashfs"]}, "part2" : {"boot":0, "fstype":"ext4", "start":"52428800B", "end":"100%", "bin_files":[]}, "table_type" : "msdos", "platform" : "VPD", "platform_id" : 0 }
+layout = {"parts" : ["part1", "part2"], "part1" : {"boot":0, "fstype":"empty", "start":"1048576B", "end":"52428799B", "bin_files":["linux_image", "kmod.squashfs", "rootfs.squashfs", "dao.squashfs"]}, "part2" : {"boot":0, "fstype":"ext4", "start":"52428800B", "end":"100%", "bin_files":[]}, "table_type" : "msdos", "platform" : "VPD", "platform_id" : 0 }
 
 [CFG_DAO]
 hw_cfg		= {"cpu":{"socket":1, "core":4, "thread":1}}
@@ -27,12 +27,12 @@ lxc_5		= {"enable":0, "name":"vm005", "rootfs":"/hdd/vm005", "fstab":"/hdd/vm005
 lxc_6		= {"enable":0, "name":"vm006", "rootfs":"/hdd/vm006", "fstab":"/hdd/vm006.fstab", "nettype":"veth", "nethwlink":"br0", "nethwaddr":"00:19:82:03:21:06", "ipaddress":"192.168.155.6", "gateway":"192.168.155.254"}
 
 qemu_count	= ["qemu_1", "qemu_2", "qemu_3", "qemu_4", "qemu_5", "qemu_6"]
-qemu_1		= {"enable":1, "name":"qemu001", "rootfs":["/hdd/data/SystemDebian9.qcow2", "/hdd/data/DataBuildIOPC.qcow2", "/hdd/data/DataBuildIOPC2.qcow2"], "nethwaddr":"01:19:82:03:21:12", "memory":10000, "smp":4}
-qemu_2		= {"enable":1, "name":"qemu002", "rootfs":["/hdd/data/Win10.qcow2"], "nethwaddr":"01:19:82:03:21:13", "memory":4096, "smp":2}
-qemu_3		= {"enable":1, "name":"qemu003", "rootfs":["/hdd/data/SystemDebian9Stock.qcow2"], "nethwaddr":"01:19:82:03:21:14", "memory":1024, "smp":1}
-qemu_4		= {"enable":0, "name":"qemu004", "rootfs":["/hdd/sdd/qemu004.sys.qcow2"], "nethwaddr":"01:19:82:03:21:15", "memory":1024, "smp":1}
-qemu_5		= {"enable":0, "name":"qemu005", "rootfs":["/hdd/sdd/qemu005.sys.qcow2"], "nethwaddr":"01:19:82:03:21:16", "memory":1024, "smp":1}
-qemu_6		= {"enable":0, "name":"qemu006", "rootfs":["/hdd/sdd/qemu006.sys.qcow2"], "nethwaddr":"01:19:82:03:21:17", "memory":1024, "smp":1}
+qemu_1		= {"enable":0, "name":"qemu001", "rootfs":["/hdd/data/SystemDebian9.qcow2", "/hdd/data/DataBuildIOPC.qcow2", "/hdd/data/DataBuildIOPC2.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:12", "gwifc":"br0"}], "memory":10000, "smp":4}
+qemu_2		= {"enable":0, "name":"qemu002", "rootfs":["/hdd/data/Win10.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:13", "gwifc":"br0"}], "memory":4096, "smp":2}
+qemu_3		= {"enable":0, "name":"qemu003", "rootfs":["/hdd/data/SystemDebian9Stock.qcow2"], "nethwaddr":"01:19:82:03:21:14", "memory":1024, "smp":1}
+qemu_4		= {"enable":0, "name":"qemu004", "rootfs":["/hdd/sdd/qemu004.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:15", "gwifc":"br0"}], "memory":1024, "smp":1}
+qemu_5		= {"enable":0, "name":"qemu005", "rootfs":["/hdd/sdd/qemu005.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:16", "gwifc":"br0"}], "memory":1024, "smp":1}
+qemu_6		= {"enable":0, "name":"qemu006", "rootfs":["/hdd/sdd/qemu006.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:17", "gwifc":"br0"}], "memory":1024, "smp":1}
 
 rfb_count	= ["rfb_1", "rfb_2", "rfb_3", "rfb_4", "rfb_5", "rfb_6"]
 rfb_1		= {"type": "tcp_ip", "host":"192.168.1.111", "port":5921}
@@ -47,10 +47,9 @@ samba_1		= {"enable":1, "type":"global", "name":"samba1", "path":""}
 samba_2		= {"enable":1, "type":"shrdir", "name":"samba2", "path":"/tmp"}
 samba_3		= {"enable":1, "type":"shrdir", "name":"samba3", "path":"/hdd/data"}
 
-#hostname_cfg	= {"src":"storage", "hostname_cfg_json":"/hdd/sys/extra_cfg.json"}
+misc_count	= ["hostname_cfg", "drbd_cfg", "dri_cfg", "config_version"]
 hostname_cfg	= {"hostname":"j3455"}
 drbd_cfg	= {"ipaddress_local":"", "macaddress_local":"", "hostname_local":"qemu1", "drbd_local":"/dev/drbd0", "disk_local":"/dev/sdb", "hostname_remote":"qemu2", "drbd_remote":"/dev/drbd0", "disk_remote":"/dev/sdb", "ipaddress_remote":"", "macaddress_remote":""}
-#swap_cfg	= {"type":"zram", "size_kb":28976, "device": "0"}
 dri_cfg		= {"enable":1, "path":"/dev/dri/card1"}
 
 sysinit_count   = ["sysinit_1", "sysinit_2", "sysinit_3", "sysinit_4", "sysinit_5"]
