--- a/x86_images/platform/dao.ini
+++ b/x86_images/platform/dao.ini
@@ -2,20 +2,21 @@
 layout = {"parts" : ["part1", "part2"], "part1" : {"boot":0, "fstype":"empty", "start":"1048576B", "end":"2097151B", "bin_files":[]}, "part2" : {"boot":1, "fstype":"fat32", "start":"2097152B", "end":"100%", "bin_files":["linux_image", "kmod.squashfs", "rootfs.squashfs", "dao.squashfs", "env.txt"]}, "table_type" : "msdos", "platform" : "VPD", "platform_id" : 0 }
 
 [CFG_DAO]
+hw_cfg		= {"cpu":{"socket":1, "core":4, "thread":1}}
 config_version	= {"major":0, "minor":0, "aux":0}
 netifc_count	= ["netifc_1", "netifc_2",  "netifc_3", "netifc_4"]
 netifc_1	= {"visable":1, "editable":0, "type":"eth", "name":"eth0", "vlan":0, "tag":0, "devices":[], "src":"none"}
 netifc_2	= {"visable":1, "editable":0, "type":"eth", "name":"eth0", "vlan":1, "tag":100, "devices":[], "src":"none"}
-netifc_3	= {"visable":1, "editable":1, "type":"bridge", "name":"br0", "vlan":0, "tag":0, "devices":["eth0"], "src":"dhcp"}
-netifc_4	= {"visable":1, "editable":1, "type":"bridge", "name":"br1", "vlan":0, "tag":0, "devices":["eth0.100"], "src": "static", "ctrlport":1, "address":"192.168.155.1", "netmask":"255.255.255.0"}
+netifc_3	= {"visable":1, "editable":1, "type":"bridge", "name":"br0", "vlan":0, "tag":0, "hwaddress":"00:19:82:03:21:10", "devices":["eth0"], "src":"dhcp"}
+netifc_4	= {"visable":1, "editable":1, "type":"bridge", "name":"br1", "vlan":0, "tag":0, "hwaddress":"00:19:82:03:21:11", "devices":["eth0.100"], "src": "static", "ctrlport":1, "address":"192.168.155.1", "netmask":"255.255.255.0"}
 
 storage_count	= ["storage_1", "storage_2", "storage_3", "storage_4", "storage_5", "storage_6"]
 storage_1	= {"enable":1, "visable":0, "formatable":0, "type":"zram", "src":"", "dst":"", "size_kb":524288, "device":0, "label":"zram" }
-storage_2	= {"enable":1, "visable":1, "formatable":0, "type":"fat", "src":"/dev/sda1", "dst":"/hdd/sys", "label":"system" }
-storage_3	= {"enable":1, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sda2", "dst":"/hdd/data", "label":"data" }
+storage_2	= {"enable":0, "visable":1, "formatable":0, "type":"fat", "src":"/dev/sda1", "dst":"/hdd/sys", "label":"system" }
+storage_3	= {"enable":0, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sda2", "dst":"/hdd/data", "label":"data" }
 storage_4	= {"enable":0, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sdb", "dst":"/hdd/sdb", "label":"sdb" }
 storage_5	= {"enable":0, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sdc", "dst":"/hdd/sdc", "label":"sdc" }
-storage_6	= {"enable":1, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sdd", "dst":"/hdd/sdd", "label":"sdd" }
+storage_6	= {"enable":0, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sdd", "dst":"/hdd/sdd", "label":"sdd" }
 
 lxc_count	= ["lxc_1", "lxc_2", "lxc_3", "lxc_4", "lxc_5", "lxc_6"]
 lxc_1		= {"enable":0, "name":"vm001", "rootfs":"/hdd/vm001", "fstab":"/hdd/vm001.fstab", "nettype":"veth", "nethwlink":"br0", "nethwaddr":"00:19:82:03:21:01", "ipaddress":"192.168.155.1", "gateway":"192.168.155.254"}
@@ -26,12 +27,12 @@ lxc_5		= {"enable":0, "name":"vm005", "rootfs":"/hdd/vm005", "fstab":"/hdd/vm005
 lxc_6		= {"enable":0, "name":"vm006", "rootfs":"/hdd/vm006", "fstab":"/hdd/vm006.fstab", "nettype":"veth", "nethwlink":"br0", "nethwaddr":"00:19:82:03:21:06", "ipaddress":"192.168.155.6", "gateway":"192.168.155.254"}
 
 qemu_count	= ["qemu_1", "qemu_2", "qemu_3", "qemu_4", "qemu_5", "qemu_6"]
-qemu_1		= {"enable":1, "name":"qemu001", "rootfs":["/hdd/sdd/qemu001.sys.qcow2"], "nethwaddr":"01:19:82:03:21:01", "memory":1024, "smp": 2}
-qemu_2		= {"enable":0, "name":"qemu002", "rootfs":["/hdd/sdd/qemu002.sys.qcow2"], "nethwaddr":"01:19:82:03:21:02", "memory":1024, "smp": 2}
-qemu_3		= {"enable":0, "name":"qemu003", "rootfs":["/hdd/sdd/qemu003.sys.qcow2"], "nethwaddr":"01:19:82:03:21:03", "memory":1024, "smp": 2}
-qemu_4		= {"enable":0, "name":"qemu004", "rootfs":["/hdd/sdd/qemu004.sys.qcow2"], "nethwaddr":"01:19:82:03:21:04", "memory":1024, "smp": 2}
-qemu_5		= {"enable":0, "name":"qemu005", "rootfs":["/hdd/sdd/qemu005.sys.qcow2"], "nethwaddr":"01:19:82:03:21:05", "memory":1024, "smp": 2}
-qemu_6		= {"enable":0, "name":"qemu006", "rootfs":["/hdd/sdd/qemu006.sys.qcow2"], "nethwaddr":"01:19:82:03:21:06", "memory":1024, "smp": 2}
+qemu_1		= {"enable":0, "name":"qemu001", "rootfs":["/hdd/data/qemu001.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:12", "gwifc":"br0"}], "memory":10000, "smp":4}
+qemu_2		= {"enable":0, "name":"qemu002", "rootfs":["/hdd/data/qemu002.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:13", "gwifc":"br0"}], "memory":4096, "smp":2}
+qemu_3		= {"enable":0, "name":"qemu003", "rootfs":["/hdd/data/qemu003.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:14", "gwifc":"br0"}], "memory":1024, "smp":1}
+qemu_4		= {"enable":0, "name":"qemu004", "rootfs":["/hdd/data/qemu004.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:15", "gwifc":"br0"}], "memory":1024, "smp":1}
+qemu_5		= {"enable":0, "name":"qemu005", "rootfs":["/hdd/data/qemu005.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:05", "gwifc":"br0"}], "memory":1024, "smp":2}
+qemu_6		= {"enable":0, "name":"qemu006", "rootfs":["/hdd/data/qemu006.sys.qcow2"], "netifcs":[{"hwaddr":"01:19:82:03:21:06", "gwifc":"br0"}], "memory":1024, "smp":2}
 
 rfb_count	= ["rfb_1", "rfb_2", "rfb_3", "rfb_4", "rfb_5", "rfb_6"]
 rfb_1		= {"type": "tcp_ip", "host":"192.168.1.111", "port":5921}
@@ -44,10 +45,10 @@ rfb_6		= {"type": "tcp_ip", "host":"192.168.1.111", "port":5926}
 samba_count	= ["samba_1", "samba_2", "samba_3"]
 samba_1		= {"enable":1, "type":"global", "name":"samba1", "path":""}
 samba_2		= {"enable":1, "type":"shrdir", "name":"samba2", "path":"/tmp"}
-samba_3		= {"enable":1, "type":"shrdir", "name":"samba3", "path":"/hdd"}
+samba_3		= {"enable":1, "type":"shrdir", "name":"samba3", "path":"/hdd/data"}
 
 misc_count	= ["hostname_cfg", "drbd_cfg", "dri_cfg", "config_version"]
-hostname_cfg	= {"hostname":"qemu1"}
+hostname_cfg	= {"hostname":"dummy"}
 drbd_cfg	= {"ipaddress_local":"", "macaddress_local":"", "hostname_local":"qemu1", "drbd_local":"/dev/drbd0", "disk_local":"/dev/sdb", "hostname_remote":"qemu2", "drbd_remote":"/dev/drbd0", "disk_remote":"/dev/sdb", "ipaddress_remote":"", "macaddress_remote":""}
 dri_cfg		= {"enable":1, "path":"/dev/dri/card1"}
 
