MAJOR_NUM=1 MINOR_NUM=10 AUX_NUM=0 update package.

--- a/x86_images/platform/dao.ini
+++ b/x86_images/platform/dao.ini
@@ -11,8 +11,8 @@ netifc_3	= {"visable":1, "editable":1, "type":"bridge", "name":"br0", "vlan":0, 
 netifc_4	= {"visable":1, "editable":1, "type":"bridge", "name":"br1", "vlan":0, "tag":0, "hwaddress":"00:19:82:03:21:11", "devices":["eth0.100"], "src": "static", "ctrlport":1, "address":"192.168.155.1", "netmask":"255.255.255.0"}
 
 storage_count	= ["storage_1", "storage_2", "storage_3", "storage_4", "storage_5", "storage_6"]
-storage_1	= {"enable":1, "visable":0, "formatable":0, "type":"zram", "src":"", "dst":"", "size_kb":524288, "device":0, "label":"zram" }
-storage_2	= {"enable":0, "visable":1, "formatable":0, "type":"fat", "src":"/dev/sda1", "dst":"/hdd/sys", "label":"system" }
+storage_1	= {"enable":1, "visable":0, "formatable":0, "type":"zram", "src":"", "dst":"", "size_kb":10000000, "device":0, "label":"zram" }
+storage_2	= {"enable":0, "visable":1, "formatable":0, "type":"btrfs", "src":"/dev/sdd", "dst":"/hdd/data", "label":"RAID1" }
 storage_3	= {"enable":0, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sda2", "dst":"/hdd/data", "label":"data" }
 storage_4	= {"enable":0, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sdb", "dst":"/hdd/sdb", "label":"sdb" }
 storage_5	= {"enable":0, "visable":1, "formatable":0, "type":"ext4", "src":"/dev/sdc", "dst":"/hdd/sdc", "label":"sdc" }
@@ -48,9 +48,13 @@ samba_2		= {"enable":1, "type":"shrdir", "name":"samba2", "path":"/tmp"}
 samba_3		= {"enable":1, "type":"shrdir", "name":"samba3", "path":"/hdd/data"}
 
 misc_count	= ["hostname_cfg", "drbd_cfg", "dri_cfg", "config_version"]
-hostname_cfg	= {"hostname":"dummy"}
+hostname_cfg	= {"hostname":"j3455"}
 drbd_cfg	= {"ipaddress_local":"", "macaddress_local":"", "hostname_local":"qemu1", "drbd_local":"/dev/drbd0", "disk_local":"/dev/sdb", "hostname_remote":"qemu2", "drbd_remote":"/dev/drbd0", "disk_remote":"/dev/sdb", "ipaddress_remote":"", "macaddress_remote":""}
 dri_cfg		= {"enable":1, "path":"/dev/dri/card1"}
 
-sysinit_count	= []
-
+sysinit_count   = ["sysinit_1", "sysinit_2", "sysinit_3", "sysinit_4", "sysinit_5"]
+sysinit_1       = {"ops_fn":2, "ops_cmd":1, "ops":"set_hostname"}
+sysinit_2       = {"ops_fn":2, "ops_cmd":1, "ops":"gen_ssh_key"}
+sysinit_3       = {"ops_fn":2, "ops_cmd":1, "ops":"mount_storage", "dev":"all"}
+sysinit_4       = {"ops_fn":2, "ops_cmd":1, "ops":"up_netifc", "ifc":"all"}
+sysinit_5       = {"ops_fn":2, "ops_cmd":1, "ops":"start_samba"}
